cambio todos los tabs por 1 solo

--- a/ui/Editor.ui
+++ b/ui/Editor.ui
@@ -105,17 +105,17 @@
         <property name="currentIndex">
          <number>0</number>
         </property>
-        <widget class="QWidget" name="tab_arenas">
+        <widget class="QWidget" name="tab_terrenos">
          <attribute name="title">
-          <string>Arenas</string>
+          <string>Terrenos</string>
          </attribute>
          <layout class="QGridLayout" name="gridLayout_5">
           <item row="0" column="0">
-           <widget class="QScrollArea" name="scrollArea_arenas">
+           <widget class="QScrollArea" name="scrollArea_terrenos">
             <property name="widgetResizable">
              <bool>true</bool>
             </property>
-            <widget class="QWidget" name="scrollArea_widget_arena">
+            <widget class="QWidget" name="scrollArea_widget_terrenos">
              <property name="geometry">
               <rect>
                <x>0</x>
@@ -145,241 +145,7 @@
                 <height>441</height>
                </rect>
               </property>
-              <layout class="QVBoxLayout" name="verticalLayout_arena"/>
-             </widget>
-            </widget>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-        <widget class="QWidget" name="tab_cimas">
-         <attribute name="title">
-          <string>Cimas</string>
-         </attribute>
-         <layout class="QGridLayout" name="gridLayout_4">
-          <item row="0" column="0">
-           <widget class="QScrollArea" name="scrollArea_cimas">
-            <property name="widgetResizable">
-             <bool>true</bool>
-            </property>
-            <widget class="QWidget" name="scrollArea_widget_cima">
-             <property name="geometry">
-              <rect>
-               <x>0</x>
-               <y>0</y>
-               <width>180</width>
-               <height>455</height>
-              </rect>
-             </property>
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <widget class="QWidget" name="verticalLayoutWidget_2">
-              <property name="geometry">
-               <rect>
-                <x>9</x>
-                <y>9</y>
-                <width>171</width>
-                <height>441</height>
-               </rect>
-              </property>
-              <layout class="QVBoxLayout" name="verticalLayout_cima"/>
-             </widget>
-            </widget>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-        <widget class="QWidget" name="tab_rocas">
-         <attribute name="title">
-          <string>Rocas</string>
-         </attribute>
-         <layout class="QGridLayout" name="gridLayout">
-          <item row="0" column="0">
-           <widget class="QScrollArea" name="scrollArea_rocas">
-            <property name="widgetResizable">
-             <bool>true</bool>
-            </property>
-            <widget class="QWidget" name="scrollArea_widget_roca">
-             <property name="geometry">
-              <rect>
-               <x>0</x>
-               <y>0</y>
-               <width>180</width>
-               <height>455</height>
-              </rect>
-             </property>
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <widget class="QWidget" name="verticalLayoutWidget_3">
-              <property name="geometry">
-               <rect>
-                <x>9</x>
-                <y>9</y>
-                <width>171</width>
-                <height>441</height>
-               </rect>
-              </property>
-              <layout class="QVBoxLayout" name="verticalLayout_roca"/>
-             </widget>
-            </widget>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-        <widget class="QWidget" name="tab_especias">
-         <attribute name="title">
-          <string>Especias</string>
-         </attribute>
-         <layout class="QGridLayout" name="gridLayout_7">
-          <item row="0" column="0">
-           <widget class="QScrollArea" name="scrollArea_especias">
-            <property name="widgetResizable">
-             <bool>true</bool>
-            </property>
-            <widget class="QWidget" name="scrollArea_widget_especia">
-             <property name="geometry">
-              <rect>
-               <x>0</x>
-               <y>0</y>
-               <width>180</width>
-               <height>455</height>
-              </rect>
-             </property>
-             <widget class="QWidget" name="verticalLayoutWidget_4">
-              <property name="geometry">
-               <rect>
-                <x>9</x>
-                <y>9</y>
-                <width>171</width>
-                <height>441</height>
-               </rect>
-              </property>
-              <layout class="QVBoxLayout" name="verticalLayout_especia"/>
-             </widget>
-            </widget>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-        <widget class="QWidget" name="tab_precipicios">
-         <attribute name="title">
-          <string>Precipicios</string>
-         </attribute>
-         <layout class="QGridLayout" name="gridLayout_6">
-          <item row="0" column="0">
-           <widget class="QScrollArea" name="scrollArea_precipicios">
-            <property name="widgetResizable">
-             <bool>true</bool>
-            </property>
-            <widget class="QWidget" name="scrollArea_widget_precipicio">
-             <property name="geometry">
-              <rect>
-               <x>0</x>
-               <y>0</y>
-               <width>180</width>
-               <height>455</height>
-              </rect>
-             </property>
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <widget class="QWidget" name="verticalLayoutWidget_5">
-              <property name="geometry">
-               <rect>
-                <x>9</x>
-                <y>9</y>
-                <width>171</width>
-                <height>441</height>
-               </rect>
-              </property>
-              <layout class="QVBoxLayout" name="verticalLayout_precipicio"/>
-             </widget>
-            </widget>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-        <widget class="QWidget" name="tab_dunas">
-         <attribute name="title">
-          <string>Dunas</string>
-         </attribute>
-         <layout class="QGridLayout" name="gridLayout_2">
-          <item row="0" column="0">
-           <widget class="QScrollArea" name="scrollArea_dunas">
-            <property name="widgetResizable">
-             <bool>true</bool>
-            </property>
-            <widget class="QWidget" name="scrollArea_widget_duna">
-             <property name="geometry">
-              <rect>
-               <x>0</x>
-               <y>0</y>
-               <width>180</width>
-               <height>455</height>
-              </rect>
-             </property>
-             <widget class="QWidget" name="verticalLayoutWidget_6">
-              <property name="geometry">
-               <rect>
-                <x>9</x>
-                <y>9</y>
-                <width>171</width>
-                <height>441</height>
-               </rect>
-              </property>
-              <layout class="QVBoxLayout" name="verticalLayout_duna"/>
-             </widget>
-            </widget>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-        <widget class="QWidget" name="tab_jugadores">
-         <attribute name="title">
-          <string>Jugadores</string>
-         </attribute>
-         <layout class="QGridLayout" name="gridLayout_9">
-          <item row="0" column="0">
-           <widget class="QScrollArea" name="scrollArea_jugadores">
-            <property name="widgetResizable">
-             <bool>true</bool>
-            </property>
-            <widget class="QWidget" name="scrollArea_widget_jugador">
-             <property name="geometry">
-              <rect>
-               <x>0</x>
-               <y>0</y>
-               <width>180</width>
-               <height>455</height>
-              </rect>
-             </property>
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <widget class="QWidget" name="verticalLayoutWidget_7">
-              <property name="geometry">
-               <rect>
-                <x>9</x>
-                <y>9</y>
-                <width>171</width>
-                <height>441</height>
-               </rect>
-              </property>
-              <layout class="QVBoxLayout" name="verticalLayout_jugador"/>
+              <layout class="QVBoxLayout" name="verticalLayout_terrenos"/>
              </widget>
             </widget>
            </widget>
