--- a/ui/Editor.ui
+++ b/ui/Editor.ui
@@ -38,13 +38,16 @@
       <property name="widgetResizable">
        <bool>true</bool>
       </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
       <widget class="QWidget" name="scrollArea_widget_mapa">
        <property name="geometry">
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>501</width>
-         <height>544</height>
+         <width>502</width>
+         <height>553</height>
         </rect>
        </property>
        <property name="sizePolicy">
@@ -105,8 +108,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>176</width>
-               <height>449</height>
+               <width>180</width>
+               <height>455</height>
               </rect>
              </property>
              <property name="sizePolicy">
@@ -162,36 +165,28 @@
      <x>0</x>
      <y>0</y>
      <width>1027</width>
-     <height>30</height>
+     <height>21</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menuMen">
+   <widget class="QMenu" name="menuArchivo">
     <property name="title">
-     <string>Me&amp;nú</string>
+     <string>A&amp;rchivo</string>
     </property>
-    <addaction name="actionagregar_items"/>
-    <addaction name="actiondesde_el_designer"/>
-    <addaction name="action_Salir_etc"/>
+    <addaction name="actionGuardar_mapa"/>
+    <addaction name="actionCargar_mapa"/>
+    <addaction name="separator"/>
+    <addaction name="actionSalir"/>
    </widget>
-   <widget class="QMenu" name="menuEspacio">
+   <widget class="QMenu" name="menuEditar">
     <property name="title">
-     <string>blah</string>
+     <string>Editar</string>
     </property>
+    <addaction name="actionCambiar_cantidad_de_jugadores"/>
+    <addaction name="separator"/>
+    <addaction name="actionCambiar_tama_o_del_mapa"/>
    </widget>
-   <widget class="QMenu" name="menublah">
-    <property name="title">
-     <string>b&amp;lah</string>
-    </property>
-   </widget>
-   <widget class="QMenu" name="menublah_2">
-    <property name="title">
-     <string>blah</string>
-    </property>
-   </widget>
-   <addaction name="menuEspacio"/>
-   <addaction name="menublah"/>
-   <addaction name="menublah_2"/>
-   <addaction name="menuMen"/>
+   <addaction name="menuArchivo"/>
+   <addaction name="menuEditar"/>
   </widget>
   <action name="actionagregar_items">
    <property name="text">
@@ -205,7 +200,32 @@
   </action>
   <action name="actiondesde_el_designer">
    <property name="text">
-    <string>desde  el designer</string>
+    <string>&amp;desde  el designer</string>
+   </property>
+  </action>
+  <action name="actionGuardar_mapa">
+   <property name="text">
+    <string>Guardar mapa</string>
+   </property>
+  </action>
+  <action name="actionCargar_mapa">
+   <property name="text">
+    <string>Cargar mapa</string>
+   </property>
+  </action>
+  <action name="actionSalir">
+   <property name="text">
+    <string>Salir</string>
+   </property>
+  </action>
+  <action name="actionCambiar_cantidad_de_jugadores">
+   <property name="text">
+    <string>Cambiar cantidad de jugadores</string>
+   </property>
+  </action>
+  <action name="actionCambiar_tama_o_del_mapa">
+   <property name="text">
+    <string>Cambiar tamaño del mapa</string>
    </property>
   </action>
  </widget>
